# SuperTux2-Wii

./: .editorconfig  .gitignore  .gitmodules  BUILD_WII.md  CMakeLists.txt  Wii.cmake  config.h.cmake
cmake/: Wii.cmake
data/scripts/: console.nut  default.nut
src/: main.cpp
src/addon/: addon.cpp  addon.hpp  addon_manager.cpp  addon_manager.hpp  downloader.cpp  downloader.hpp  md5.cpp  md5.hpp
src/audio/: dummy_sound_source.cpp  dummy_sound_source.hpp  musicref.cpp  musicref.hpp  ogg_sound_file.cpp  ogg_sound_file.hpp  openal_sound_source.cpp  openal_sound_source.hpp  sdl_sound_source.cpp  sdl_sound_source.hpp  sound_error.cpp  sound_error.hpp  sound_file.cpp  sound_file.hpp  sound_manager.cpp  sound_manager.hpp  sound_source.hpp  stream_sound_source.cpp  stream_sound_source.hpp  wav_sound_file.cpp  wav_sound_file.hpp
src/badguy/: angrystone.cpp  angrystone.hpp  badguy.cpp  badguy.hpp  bomb.cpp  bomb.hpp  bouncing_snowball.cpp  bouncing_snowball.hpp  captainsnowball.cpp  captainsnowball.hpp  crystallo.cpp  crystallo.hpp  dart.cpp  dart.hpp  darttrap.cpp  darttrap.hpp  dispenser.cpp  dispenser.hpp  fish.cpp  fish.hpp  flame.cpp  flame.hpp  flyingsnowball.cpp  flyingsnowball.hpp  ghostflame.cpp  ghostflame.hpp  ghosttree.cpp  ghosttree.hpp  goldbomb.cpp  goldbomb.hpp  haywire.cpp  haywire.hpp  iceflame.cpp  iceflame.hpp  igel.cpp  igel.hpp  jumpy.cpp  jumpy.hpp  kamikazesnowball.cpp  kamikazesnowball.hpp  (+66 more)
src/control/: codecontroller.cpp  codecontroller.hpp  controller.cpp  controller.hpp  game_controller_manager.cpp  game_controller_manager.hpp  input_manager.cpp  input_manager.hpp  joystick_config.cpp  joystick_config.hpp  joystick_manager.cpp  joystick_manager.hpp  keyboard_config.cpp  keyboard_config.hpp  keyboard_manager.cpp  keyboard_manager.hpp
src/editor/: editor.cpp  editor.hpp  input_center.cpp  input_center.hpp  input_gui.cpp  input_gui.hpp  layer_icon.cpp  layer_icon.hpp  layers_gui.cpp  layers_gui.hpp  node_marker.cpp  node_marker.hpp  object_group.cpp  object_group.hpp  object_icon.cpp  object_icon.hpp  object_input.cpp  object_input.hpp  object_menu.cpp  object_menu.hpp  object_option.cpp  object_option.hpp  object_settings.cpp  object_settings.hpp  point_marker.cpp  point_marker.hpp  resizer.cpp  resizer.hpp  scroller.cpp  scroller.hpp  spawnpoint_marker.cpp  spawnpoint_marker.hpp  tile_selection.cpp  tile_selection.hpp  tip.cpp  tip.hpp  tool_icon.cpp  tool_icon.hpp  worldmap_objects.cpp  worldmap_objects.hpp
src/gui/: dialog.cpp  dialog.hpp  item_action.cpp  item_action.hpp  item_back.cpp  item_back.hpp  item_badguy_select.cpp  item_badguy_select.hpp  item_color.cpp  item_color.hpp  item_colorchannel.cpp  item_colorchannel.hpp  item_colordisplay.cpp  item_colordisplay.hpp  item_controlfield.cpp  item_controlfield.hpp  item_file.cpp  item_file.hpp  item_goto.cpp  item_goto.hpp  item_hl.cpp  item_hl.hpp  item_inactive.cpp  item_inactive.hpp  item_intfield.cpp  item_intfield.hpp  item_label.cpp  item_label.hpp  item_numfield.cpp  item_numfield.hpp  item_script.cpp  item_script.hpp  item_script_line.cpp  item_script_line.hpp  item_stringselect.cpp  item_stringselect.hpp  item_textfield.cpp  item_textfield.hpp  item_toggle.cpp  item_toggle.hpp  (+17 more)
src/io/: ifile_stream.cpp  ifile_stream.hpp  ofile_stream.cpp  sdl_io.cpp  sdl_io.hpp
src/math/: aatriangle.cpp  aatriangle.hpp  random_generator.cpp  random_generator.hpp  rect.hpp  rectf.cpp  rectf.hpp  size.cpp  size.hpp  sizef.cpp  sizef.hpp  vector.cpp  vector.hpp
src/object/: ambient_sound.cpp  ambient_sound.hpp  anchor_point.cpp  anchor_point.hpp  background.cpp  background.hpp  bicycle_platform.cpp  bicycle_platform.hpp  block.cpp  block.hpp  bonus_block.cpp  bonus_block.hpp  bouncy_coin.cpp  bouncy_coin.hpp  brick.cpp  brick.hpp  broken_brick.cpp  broken_brick.hpp  bullet.cpp  bullet.hpp  camera.cpp  camera.hpp  candle.cpp  candle.hpp  cloud_particle_system.cpp  cloud_particle_system.hpp  coin.cpp  coin.hpp  coin_explode.cpp  coin_explode.hpp  coin_rain.cpp  coin_rain.hpp  comet_particle_system.cpp  comet_particle_system.hpp  decal.cpp  decal.hpp  display_effect.cpp  display_effect.hpp  electrifier.cpp  electrifier.hpp  (+117 more)
src/physfs/: ifile_stream.cpp  ifile_stream.hpp  ifile_streambuf.cpp  ifile_streambuf.hpp  ofile_stream.cpp  ofile_stream.hpp  ofile_streambuf.cpp  ofile_streambuf.hpp  physfs_file_system.cpp  physfs_file_system.hpp  physfs_sdl.cpp  physfs_sdl.hpp
src/scripting/: ambient_sound.cpp  ambient_sound.hpp  anchor_points.hpp  background.cpp  background.hpp  camera.cpp  camera.hpp  candle.cpp  candle.hpp  display_effect.cpp  display_effect.hpp  exposed_object.hpp  floating_image.cpp  floating_image.hpp  functions.cpp  functions.hpp  gradient.cpp  gradient.hpp  level.cpp  level.hpp  level_time.cpp  level_time.hpp  particlesystem.cpp  particlesystem.hpp  platform.cpp  platform.hpp  player.cpp  player.hpp  scripted_object.cpp  scripted_object.hpp  scripting.cpp  scripting.hpp  sector.cpp  sector.hpp  serialize.cpp  serialize.hpp  squirrel_error.cpp  squirrel_error.hpp  squirrel_util.cpp  squirrel_util.hpp  (+17 more)
src/sprite/: sprite.cpp  sprite.hpp  sprite_data.cpp  sprite_data.hpp  sprite_manager.cpp  sprite_manager.hpp  sprite_ptr.hpp
src/supertux/: collision.cpp  collision.hpp  collision_hit.hpp  colorscheme.cpp  colorscheme.hpp  command_line_arguments.cpp  command_line_arguments.hpp  console.cpp  console.hpp  constants.hpp  direction.cpp  direction.hpp  fadein.cpp  fadein.hpp  fadeout.cpp  fadeout.hpp  flip_level_transformer.cpp  flip_level_transformer.hpp  game_manager.cpp  game_manager.hpp  game_object.cpp  game_object.hpp  game_object_ptr.hpp  game_session.cpp  game_session.hpp  gameconfig.cpp  gameconfig.hpp  globals.cpp  globals.hpp  info_box.cpp  info_box.hpp  info_box_line.cpp  info_box_line.hpp  level.cpp  level.hpp  level_parser.cpp  level_parser.hpp  level_transformer.cpp  level_transformer.hpp  levelintro.cpp  (+53 more)
src/trigger/: climbable.cpp  climbable.hpp  door.cpp  door.hpp  scripttrigger.cpp  scripttrigger.hpp  secretarea_trigger.cpp  secretarea_trigger.hpp  sequence_trigger.cpp  (+5 more)
(+146 files in other folders)
